Bug 229982 - webgl/2.0.y/deqp/functional/gles3/negativestateapi.html get_query_parameter fails on Metal
Summary: webgl/2.0.y/deqp/functional/gles3/negativestateapi.html get_query_parameter ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGL (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on: 229947
Blocks: webgl2conformance
  Show dependency treegraph
 
Reported: 2021-09-07 00:41 PDT by Kimmo Kinnunen
Modified: 2021-09-07 23:44 PDT (History)
4 users (show)

See Also:


Attachments
Patch (12.98 KB, patch)
2021-09-07 04:21 PDT, Kimmo Kinnunen
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2021-09-07 00:41:09 PDT
Start testcase: state.get_query_parameter
FAIL state.get_query_parameter: Expected gl.INVALID_OPERATION, but got gl.NO_ERROR.
Comment 1 Kimmo Kinnunen 2021-09-07 04:21:05 PDT
Created attachment 437486 [details]
Patch
Comment 2 Dean Jackson 2021-09-07 11:08:49 PDT
Comment on attachment 437486 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=437486&action=review

> Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:80
> +#include <algorithm>

Why this?
Comment 3 Kimmo Kinnunen 2021-09-07 11:14:40 PDT
(In reply to Dean Jackson from comment #2)
> Comment on attachment 437486 [details]
> Patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=437486&action=review
> 
> > Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:80
> > +#include <algorithm>
> 
> Why this?

std::find
Comment 4 EWS 2021-09-07 23:43:09 PDT
Committed r282131 (241428@main): <https://commits.webkit.org/241428@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 437486 [details].
Comment 5 Radar WebKit Bug Importer 2021-09-07 23:44:18 PDT
<rdar://problem/82858538>